--- a/Day-1/login-2.html
+++ b/Day-1/login-2.html
@@ -56,7 +56,7 @@
                 <div class="d-flex justify-content-center pt-4">
                     <button type="button" class="btn btn-dark Display-1 font-weight-bold">AKSHAY KHER</button>
                 </div>
-                <form action="/action_page.php">
+                <form action="/">
                     <div class="form-group pt-4 mt-4">
                         <input type="email" class="form-control email" id="email" placeholder="Email" name="email">
                     </div>
